# Video_Download_App-VDA-

./: .gitignore  README.md  VDA.sln  fix_git.ps1  setup_deps.ps1
src/VDA.System/: AppCore.fs  Native.fs  VDA.System.fsproj
src/VDA.UI/: MainWindow.fs  MainWindow.fs.bak  Program.fs  VDA.UI.fsproj
src/VDA.main/: Program.fs  VDA.main.fsproj  app.manifest
src/vda_core/: Cargo.toml
src/vda_core/src/: lib.rs
