[package]
name = "vda_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# FFI用
libc = "0.2"
# 動画ダウンロード用 (youtube-dl/yt-dlp ラッパー)
youtube_dl = "0.10.0"
# 非同期処理
tokio = { version = "1", features = ["full"] }
# JSON処理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# エラーハンドリング
anyhow = "1.0"

